some loc changes and additions

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -946,7 +946,7 @@ SLG_ADJ;Selangorese;;;;;;;;;;;;;x
 SLO_ADJ;Slovenian;Slovène;Slowenisch;;;;;;;;;;;x
 SLS_ADJ;Silesian;;;;;;;;;;;;;x
 SLT_ADJ;Saltan;;;;;;;;;;;x
-SLU_ADJ;Sanluisan;;;;;;;;;;;x
+SLU_ADJ;Slavic;;;;;;;;;;;x
 SLV_ADJ;Slovak;Slovaque;Slowakisch;;;;;;;;;;;x
 SLW_ADJ;Sulawesian;;;;;;;;;;;;;x
 SLW_absolute_monarchy_ADJ;Boni;;;;;;;;;;;;;x
