--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -2010,6 +2010,13 @@ SIB_hms_government;Siberia;;;;;;;;;;;;;x
 SIB_prussian_constitutionalism;Siberia;;;;;;;;;;;;;x
 SIE_colonial_company;Siebenburgen;;;;;;;;;;;;;x
 SIE_dominion;Siebenburgen;;;;;;;;;;;;;x
+SLU_absolute_monarchy;Empire of All Slavs;;;;;;;;;;;;;x
+SLU_hms_government;Empire of All Slavs;;;;;;;;;;;;;x
+SLU_prussian_constitutionalism;Empire of All Slavs;;;;;;;;;;;;;x
+SLU_democracy;All-Slavic Union;;;;;;;;;;;;;x
+SLU_proletarian_dictatorship;Union of Slavic Soviet Socialist Republics;;;;;;;;;;;;;x
+SLU_fascist_dictatorship;Greater Slavic Empire;;;;;;;;;;;;;x
+SLU_bourgeois_dictatorship;United Slavic Federation;;;;;;;;;;;;;x
 SLS_colonial_company;Schlesien;;;;;;;;;;;;;x
 SLS_dominion;Schlesien;;;;;;;;;;;;;x
 SLW_absolute_monarchy;Bone;;;;;;;;;;;;;x
