--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -233,7 +233,7 @@ DJA;Jambi;;;;;;;;;;;;;x
 DLM;Dalmatia;;;;;;;;;;;;;x
 DNB;Danubian Federation;;;;;;;;;;;;;x
 DND;Dendi;;;;;;;;;;;;;x
-DOM;Dominican Republic;Rï¿½publique dominicaine;Dominikanische Republik;;;;;;;;;;;x
+DOM;Dominican Republic;République dominicaine;Dominikanische Republik;;;;;;;;;;;x
 DON;Cossack Republic;;;;;;;;;;;;;x
 DRA;Dravidistan;;;;;;;;;;;;;x
 DRU;Jabal Druze;;;;;;;;;;;;;x
@@ -241,8 +241,8 @@ DRV;Darvaz;;;;;;;;;;;;;x
 DUB;Dubai;;;;;;;;;;;x
 DUR;Pashtunistan;;;;;;;;;;;;;x
 DZG;Danzig;Dantzig;Danzig;;;;;;;;;;;x
-ECU;Ecuador;ï¿½quateur;Ekuador;;;;;;;;;;;x
-EGY;Egypt;ï¿½gypte;Ägypten;;;;;;;;;;;x
+ECU;Ecuador;Équateur;Ekuador;;;;;;;;;;;x
+EGY;Egypt;Égypte;Ägypten;;;;;;;;;;;x
 EIC;East India Company;;;;;;;;;;;;;x
 ELS;El Salvador;Salvador;El Salvador;;;;;;;;;;;x
 ENG;United Kingdom;Angleterre;Großbritannien;;;;;;;;;;;x
@@ -275,7 +275,7 @@ GCO;Gran Colombia;;;;;;;;;;;;;x
 GDL;Guadeloupe;;;;;;;;;;;;;x
 GEL;Geledi;;;;;;;;;;;;;x
 GEN;Genoa;;;;;;;;;;;;;x
-GEO;Georgia;Gï¿½orgie;Georgien;;;;;;;;;;;x
+GEO;Georgia;Géorgie;Georgien;;;;;;;;;;;x
 GER;Germany;Allemagne;Deutschland;;;;;;;;;;;x
 GHN;Ghana;;;;;;;;;;;;;x
 GIL;Gilgit;;;;;;;;;;;;;x
@@ -288,7 +288,7 @@ GMJ;Guominjun;;;;;;;;;;;;;x
 GNE;Guinea;;;;;;;;;;;;;x
 GNG;Guangdong;;;;;;;;;;;;;x
 GON;Gonder;Gonder;Gonder;;;;;;;;;;;x
-GRE;Greece;Grï¿½ce;Griechenland;;;;;;;;;;;x
+GRE;Greece;Gréce;Griechenland;;;;;;;;;;;x
 GRH;Garhwal;;;;;;;;;;;;;x
 GRN;Greenland;;;;;;;;;;;;;x
 GUA;Guatemala;Guatemala;Guatemala;;;;;;;;;;;x
@@ -329,12 +329,12 @@ IDO;Indochina;;;;;;;;;;;;;x
 IME;Imereti;;;;;;;;;;;;;x
 IMG;Mengjiang;;;;;;;;;;;;;x
 IND;Indore;Indore;Indore;;;;;;;;;;;x
-INO;Indonesia;Indonï¿½sie;Indonesien;;;;;;;;;;;x
-ION;Ionian Islands;ï¿½les Ioniennes;Ionische Inseln;;;;;;;;;;;x
+INO;Indonesia;Indonésie;Indonesien;;;;;;;;;;;x
+ION;Ionian Islands;Éles Ioniennes;Ionische Inseln;;;;;;;;;;;x
 IOT;Chagos Islands;;;;;;;;;;;;;x
 IRE;Ireland;Irlande;Irland;;;;;;;;;;;x
 IRQ;Iraq;Iraq;Irak;;;;;;;;;;;x
-ISR;Israel;Israï¿½l;Israel;;;;;;;;;;;x
+ISR;Israel;Israél;Israel;;;;;;;;;;;x
 ITA;Italy;Italie;Italien;;;;;;;;;;;x
 ITP;Italy;;;;;;;;;;;;;x
 ITS;Italy;;;;;;;;;;;;;x
@@ -342,7 +342,7 @@ IVC;Ivory Coast;;;;;;;;;;;;;x
 IZH;Ingria;;;;;;;;;;;;;x
 JAI;Jaipur;Jaipur;Jaipur;;;;;;;;;;;x
 JAL;Futa Jallon;;;;;;;;;;;;;x
-JAM;Jamaica;Jamaï¿½que;Jamaica;;;;;;;;;;;x
+JAM;Jamaica;Jamaéque;Jamaica;;;;;;;;;;;x
 JAN;Jan Mayen;Jan Mayen;Jan Mayen;;;;;;;;;;;x
 JAP;Japan;Japon;Japan;;;;;;;;;;;x
 JAS;Jaisalmer;Jaisalmer;Jaisalmer;;;;;;;;;;;x
@@ -419,7 +419,7 @@ LBN;Lebanon;;;;;;;;;;;;;x
 LBY;Libya;;;;;;;;;;;;;x
 LEG;Tientsin;;;;;;;;;;;;;x
 LHJ;Lahej;;;;;;;;;;;;;x
-LIB;Liberia;Libï¿½ria;Liberia;;;;;;;;;;;x
+LIB;Liberia;Libéria;Liberia;;;;;;;;;;;x
 LIE;Liechtenstein;;;;;;;;;;;;;x
 LIM;Limburg;;;;;;;;;;;;;x
 LIP;Lippe-Detmold;Lippe-Detmold;Lippe-Detmold;;;;;;;;;;;x
@@ -433,7 +433,7 @@ LPL;United Provinces;;;;;;;;;;;;;x
 LRJ;La Rioja;;;;;;;;;;;x
 LSK;Alaska;;;;;;;;;;;;;x
 LUA;Luang Prabang;Luang Prabang;Luang Prabang;;;;;;;;;;;x
-LUB;Lübeck;Lï¿½beck;Lübeck;;;;;;;;;;;x
+LUB;Lübeck;Lébeck;Lübeck;;;;;;;;;;;x
 LUC;Lucca;Lucques;Lucca;;;;;;;;;;;x
 LUN;Lunda;Lunda;Lunda;;;;;;;;;;;x
 LUW;Luwu;;;;;;;;;;;;;x
@@ -478,9 +478,9 @@ MLY;Malaysia;;;;;;;;;;;;;x
 MNC;Monaco;Monaco;Monaco;;;;;;;;;;;x
 MNG;Mongo;Mongo;Mongo;;;;;;;;;;;x
 MNP;Manipur;;;;;;;;;;;;;x
-MOD;Modena;Modï¿½ne;Modena;;;;;;;;;;;x
+MOD;Modena;Modéne;Modena;;;;;;;;;;;x
 MOL;Moldavia;Moldavie;Moldawien;;;;;;;;;;;x
-MON;Montenegro;Montï¿½nï¿½gro;Montenegro;;;;;;;;;;;x
+MON;Montenegro;Monténégro;Montenegro;;;;;;;;;;;x
 MOR;Morocco;Maroc;Marokko;;;;;;;;;;;x
 MOS;Mossi;Mossi;Mossi;;;;;;;;;;;x
 MOZ;Mozambique;;;;;;;;;;;;;x
@@ -492,7 +492,7 @@ MSK;Misquito Coast;;;;;;;;;;;;;x
 MSN;Misiones;;;;;;;;;;;;;x
 MSS;Samos;;;;;;;;;;;;;x
 MST;Mecklenburg-Strelitz;;;;;;;;;;;;;x
-MTC;Métis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konföderation;;;;;;;;;;;x
+MTC;Métis Confederacy;Confédération métisse;Metis-Konföderation;;;;;;;;;;;x
 MTQ;Martinique;;;;;;;;;;;;;x
 MUD;Mudhol;;;;;;;;;;;;;x
 MUG;Mughalistan;Mogholistan;Mughalistan;;;;;;;;;;;x
@@ -509,23 +509,23 @@ NBR;New Brunswick;Terre-Neuve;Neufundland;;;;;;;;;;;x
 NCT;Neuchatel;;;;;;;;;;;;;x
 NEJ;Nejd;Nejd;Nejd;;;;;;;;;;;x
 NEN;New England;Nouvelle-Angleterre;Neuengland;;;;;;;;;;;x
-NEP;Nepal;Nï¿½pal;Nepal;;;;;;;;;;;x
+NEP;Nepal;Népal;Nepal;;;;;;;;;;;x
 NET;Netherlands;Pays-Bas;Niederlande;;;;;;;;;;;x
 NEW;Newfoundland;Terre-Neuve;Neufundland;;;;;;;;;;;x
 NGA;Nagalim;;;;;;;;;;;;;x
-NGF;North German Federation;Confï¿½dï¿½ration de l'Allemagne du Nord;Norddeutscher Bund;;;;;;;;;;;x
+NGF;North German Federation;Confédération de l'Allemagne du Nord;Norddeutscher Bund;;;;;;;;;;;x
 NGR;Nigeria;;;;;;;;;;;;;x
 NIA;Nianjun;;;;;;;;;;;;;x
 NIC;Nicaragua;Nicaragua;Nicaragua;;;;;;;;;;;x
 NIG;Niger;;;;;;;;;;;;;x
 NKO;Nkore;;;;;;;;;;;;;x
 NMB;Namibia;;;;;;;;;;;;;x
-NOR;Norway;Norvï¿½ge;Norwegen;;;;;;;;;;;x
+NOR;Norway;Norvége;Norwegen;;;;;;;;;;;x
 NPL;Naples;Naples;Naples;;;;;;;;;;;x
 NRM;Normandy;;;;;;;;;;;;;x
 NSC;Nova Scotia;;;;;;;;;;;;;x
 NYE;North Yemen;;;;;;;;;;;;;x
-NZL;New Zealand;Nouvelle-Zï¿½lande;Neuseeland;;;;;;;;;;;x
+NZL;New Zealand;Nouvelle-Zélande;Neuseeland;;;;;;;;;;;x
 NZF;Nouvelle-Zélande;;;;;;;;;;;;;x
 OAX;Oaxaca;;;;;;;;;;;;;x
 OCC;Occitania;Occitanie;Occitania;;;;;;;;;;;x
@@ -544,7 +544,7 @@ PAT;Patani;;;;;;;;;;;;;x
 PBC;Peru-Bolivia;;;;;;;;;;;;;x
 PEI;Prince Edward Island;;;;;;;;;;;;;x
 PER;Iran;Perse;Persien;;;;;;;;;;;x
-PEU;Peru;Pï¿½rou;Peru;;;;;;;;;;;x
+PEU;Peru;Pérou;Peru;;;;;;;;;;;x
 PGG;Pingnan Guo;;;;;;;;;;;;;x
 PHG;Pahang;;;;;;;;;;;;;x
 PHL;Philippines;Philippines;Philippinen;;;;;;;;;;;x
@@ -571,7 +571,7 @@ PZN;Poznan;Poznan;Poznan;;;;;;;;;;;x
 QAT;Qatar;;;;;;;;;;;;;x
 QCI;Queen Charlotte Islands;;;;;;;;;;;;;x
 QNG;Qing;;;;;;;;;;;;;x
-QUE;Quebec;Quï¿½bec;Quebec;;;;;;;;;;;x
+QUE;Quebec;Québec;Quebec;;;;;;;;;;;x
 RAJ;Rajputana;;;;;;;;;;;;;x
 RAM;Rampur;;;;;;;;;;;;;x
 RAS;Ras Al Khaimah;;;;;;;;;;;x
@@ -593,8 +593,8 @@ SPL;São Paulo;;;;;;;;;;;;;x
 MTG;Transatlantic Republic of Mato Grosso;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
-RHI;Rhineland;Rhï¿½nanie;Rheinland;;;;;;;;;;;x
-RHO;Southern Rhodesia;Rhodï¿½sie du sud;Südrhodesien;;;;;;;;;;;x
+RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
+RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
 RJK;Rajkot;;;;;;;;;;;;;x
 RLE;Reuss-Lobenstein-Ebersdorf;;;;;;;;;;;;;x
@@ -606,14 +606,14 @@ RPP;Rajpipla;;;;;;;;;;;;;x
 RSR;Reuss Elder Line;;;;;;;;;;;;;x
 RUM;Eastern Rumelia;;;;;;;;;;;;;x
 RUS;Russia;Russie;Russland;;;;;;;;;;;x
-RUT;Ruthenia;Ruthï¿½nie;Ruthenien;;;;;;;;;;;x
+RUT;Ruthenia;Ruthénie;Ruthenien;;;;;;;;;;;x
 RWA;Rwanda;;;;;;;;;;;;;x
 RYU;Ryukyu;;;;;;;;;;;;;x
 SAA;Saarland;Sarre;Saarland;;;;;;;;;;;x
 SAF;South Africa;Afrique du Sud;Südafrika;;;;;;;;;;;x
 SAK;Siak;;;;;;;;;;;;;x
 SAM;Sisam Imëreti;;;;;;;;;;;;;x
-SAR;Sardinia-Piedmont;Piï¿½mont-Sardaigne;Sardinien-Piemont;;;;;;;;;;;x
+SAR;Sardinia-Piedmont;Piémont-Sardaigne;Sardinien-Piemont;;;;;;;;;;;x
 SAT;Kyushu;;;;;;;;;;;;;x
 SAX;Saxony;Saxe;Sachsen;;;;;;;;;;;x
 SBA;Buenos Aires;;;;;;;;;;;;;x
@@ -621,14 +621,14 @@ SBS;Sambas;;;;;;;;;;;;;x
 SCA;Scandinavia;Scandinavie;Skandinavien;;;;;;;;;;;x
 SCH;Schleswig;Slesvig;Schleswig;;;;;;;;;;;x
 SCL;Schaumburg-Lippe;;;;;;;;;;;;;x
-SCO;Scotland;ï¿½cosse;Schottland;;;;;;;;;;;x
+SCO;Scotland;Écosse;Schottland;;;;;;;;;;;x
 SDB;Sonderbund;;;;;;;;;;;;;x
 SDE;Santiago del Estero;;;;;;;;;;;x
 SEG;Bamana Empire;;;;;;;;;;;;;x
 SEN;Tohoku;;;;;;;;;;;;;x
 SER;Serbia;Serbie;Serbien;;;;;;;;;;;x
 SEY;Seychelles;;;;;;;;;;;;;x
-SGF;South German Federation;ï¿½tats de l'Allemagne du Sud;Süddeutscher Bund;;;;;;;;;;;x
+SGF;South German Federation;États de l'Allemagne du Sud;Süddeutscher Bund;;;;;;;;;;;x
 SGM;Hohenzollern-Sigmaringen;;;;;;;;;;;;;x
 SGP;Singapore;;;;;;;;;;;;;x
 SHA;Shan;;;;;;;;;;;;;x
@@ -650,10 +650,10 @@ SJN;San Juan;;;;;;;;;;;x
 SLA;Selimbau;;;;;;;;;;;;;x
 SLE;Sierra Leone;;;;;;;;;;;;;x
 SLG;Selangor;;;;;;;;;;;;;x
-SLO;Slovenia;Slovï¿½nie;Slowenien;;;;;;;;;;;x
+SLO;Slovenia;Slovénie;Slowenien;;;;;;;;;;;x
 SLS;Silesia;;;;;;;;;;;;;x
 SLT;Salta;;;;;;;;;;;x
-SLU;San Luis;;;;;;;;;;;x
+SLU;Slavic Union;;;;;;;;;;;x
 SLV;Slovakia;Slovaquie;Slowakei;;;;;;;;;;;x
 SLW;Sulawesi;;;;;;;;;;;;;x
 SMO;Samoa;;;;;;;;;;;;;x
@@ -687,7 +687,7 @@ SVA;Svaneti;;;;;;;;;;;;;x
 SV0;Free Svaneti;;;;;;;;;;;;;x
 SVY;Savoy;;;;;;;;;;;;;x
 SWA;Swat;;;;;;;;;;;;;x
-SWE;Sweden;Suï¿½de;Schweden;;;;;;;;;;;x
+SWE;Sweden;Suéde;Schweden;;;;;;;;;;;x
 SWG;Schwarzburg-Sondershausen;;;;;;;;;;;;;x
 SWH;Schleswig-Holstein;;;;;;;;;;;;;x
 SWI;Switzerland;Suisse;Schweiz;;;;;;;;;;;x
@@ -731,7 +731,7 @@ TRP;Tripura;;;;;;;;;;;;;x
 TRZ;Trarza;;;;;;;;;;;;;x
 TST;Alto Adige;;;;;;;;;;;;;x
 TSW;Botswana;Botswana;Botswana;;;;;;;;;;;x
-TTB;Trinidad and Tobago;Trinitï¿½ & Tobago;Trinidad & Tobago;;;;;;;;;;;x
+TTB;Trinidad and Tobago;Trinité & Tobago;Trinidad & Tobago;;;;;;;;;;;x
 TTN_ADJ;Parsig;;;;;;;;;;;;;x
 TTN_absolute_monarchy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
 TTN_democracy2_ADJ;Caucaso-Albanian;;;;;;;;;;;;;x
@@ -743,7 +743,7 @@ TUN;Tunisia;;;;;;;;;;;;;x
 TUR;Turkey;Empire ottoman;Osmanisches Reich;;;;;;;;;;;x
 TUS;Tuscany;Toscane;Toskana;;;;;;;;;;;x
 UBD;United Baltic Provinces;Provinces baltiques unies;Vereinite Baltische Staaten;;;;;;;;;;;x
-UCA;Federal Republic of Central America;Confï¿½dï¿½ration d'Amï¿½rique centrale;Zentralamerikanische Konföderation;;;;;;;;;;;x
+UCA;Federal Republic of Central America;Confédération d'Amérique centrale;Zentralamerikanische Konföderation;;;;;;;;;;;x
 UCV;Temp. Uncivilized Nation;;;;;;;;;;;;;x
 UIL;New American Alliance;;;;;;;;;;;;;x
 UKR;Ukraine;Ukraine;Ukraine;;;;;;;;;;;x
@@ -758,7 +758,7 @@ URA;Ural Republic;;;;;;;;;;;;;x
 URM;Urmia;;;;;;;;;;;;;x
 URP;United Principalities;;;;;;;;;;;;;x
 URU;Uruguay;Uruguay;Uruguay;;;;;;;;;;;x
-USA;United States of America;ï¿½tats-Unis;USA;;;;;;;;;;;x
+USA;United States of America;États-Unis;USA;;;;;;;;;;;x
 USS;United States of South America;;;;;;;;;;;;;x
 UTI;Territory Exchange;;;;;;;;;;;;;x
 U01;Assimilation Campaign;;;;;;;;;;;;;x
@@ -800,7 +800,7 @@ XBI;Xibei San Ma;Xibei San Ma;Xibei San Ma;;;;;;;;;;;x
 XHO;Xhosa;Xhosa;Xhosa;;;;;;;;;;;x
 XIN;Xinjiang;Clique de Xinjiang;Xinjiang-Clique;;;;;;;;;;;x
 YAK;Yakutia;;;;;;;;;;;;;x
-YEM;Yemen;Yï¿½men;Jemen;;;;;;;;;;;x
+YEM;Yemen;Yémen;Jemen;;;;;;;;;;;x
 YNN;Yunnan;Clique de Yunnan;Yunnan-Clique;;;;;;;;;;;x
 YUC;Yucatan;;;;;;;;;;;;;x
 YUG;Yugoslavia;Yougoslavie;Jugoslawien;;;;;;;;;;;x
