TODO: Figure out what mistake I made that causes to crash on loading rivers

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -102,6 +102,16 @@ ALS_dominion;Elsaß-Lothringen;;;;;;;;;;;;;x
 ALT_absolute_monarchy;Altai Uriankhai;;;;;;;;;;;;;x
 ALT_hms_government;Altai Uriankhai;;;;;;;;;;;;;x
 ALT_prussian_constitutionalism;Altai Uriankhai;;;;;;;;;;;;;x
+ALX_absolute_monarchy;Duchy of Anhalt;;;;;;;;;;;;;x
+ALX_colonial_company;Gau Dessau;;;;;;;;;;;;;x
+ALX_democracy;Free State of Anhalt;;;;;;;;;;;;;x
+ALX_dominion;Gau Dessau;;;;;;;;;;;;;x
+ALX_fascist_dictatorship;Dessauer Reich;;;;;;;;;;;;;x
+ALX_federal_democracy;Free State of Anhalt;;;;;;;;;;;;;x
+ALX_hms_government;Duchy of Anhalt;;;;;;;;;;;;;x
+ALX_parliamentary_republic;Free State of Anhalt;;;;;;;;;;;;;x
+ALX_proletarian_dictatorship;Dessauer Democratic Republic;;;;;;;;;;;;;x
+ALX_prussian_constitutionalism;Duchy of Anhalt;;;;;;;;;;;;;x
 ANB_absolute_monarchy;Duchy of Anhalt-Bernburg;;;;;;;;;;;;;x
 ANB_colonial_company;Gau Bernburg;;;;;;;;;;;;;x
 ANB_democracy;Free State of Anhalt-Bernburg;;;;;;;;;;;;;x
@@ -1053,6 +1063,16 @@ GER_bourgeois_dictatorship;Grand German Republic;Empire allemand;Deutsches Kaise
 GER_democracy;German Republic;Empire allemand;Deutsches Kaiserreich;;;;;;;;;;;x
 GER_hms_government;German Empire;Empire allemand;Deutsches Kaiserreich;;;;;;;;;;;x
 GER_prussian_constitutionalism;German Empire;Empire allemand;Deutsches Kaiserreich;;;;;;;;;;;x
+GIT_absolute_monarchy;Duchy of Anhalt;;;;;;;;;;;;;x
+GIT_colonial_company;Gau Dessau;;;;;;;;;;;;;x
+GIT_democracy;Free State of Anhalt;;;;;;;;;;;;;x
+GIT_dominion;Gau Dessau;;;;;;;;;;;;;x
+GIT_fascist_dictatorship;Dessauer Reich;;;;;;;;;;;;;x
+GIT_federal_democracy;Free State of Anhalt;;;;;;;;;;;;;x
+GIT_hms_government;Duchy of Anhalt;;;;;;;;;;;;;x
+GIT_parliamentary_republic;Free State of Anhalt;;;;;;;;;;;;;x
+GIT_proletarian_dictatorship;Dessauer Democratic Republic;;;;;;;;;;;;;x
+GIT_prussian_constitutionalism;Duchy of Anhalt;;;;;;;;;;;;;x
 GNG_presidential_dictatorship;Guangdong Clique;;;;;;;;;;;;;x
 GRN_absolute_monarchy;County of Greenland;;;;;;;;;;;;;x
 GRN_colonial_company;Kongelige Grønlandske Handel;;;;;;;;;;;;;x
