Ottos Approve custom tooltip

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -74,3 +74,4 @@ renaming_half_y;Renamings will happen every §G6 months§!.§b;;;;;;;;;;;;x
 renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
 renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
 renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
+otto_approval_improve;Otto's Approval Improve.§b;;;;;;;;;;;;x
