--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1635,4 +1635,4 @@ cisplatina_is_ours;Cisplatina is ours!;;;;;;;;;;;;;;
 otto_of_greece;Otto of Greece;;;;;;;;;;;;;x
 otto_of_greece_desc;Assuming the title "King of Greece" as established via the Convention of London, Otto sees himself as an enlightened absolutist and seeks to modernize Greece.;;;;;;;;;;;;;x
 greek_independence_day;Greek Independence Day;;;;;;;;;;;;;x
-greek_independence_day;KOBA ADD LOC TO THIS LATER;;;;;;;;;;;;;x
+greek_independence_day_desc;KOBA ADD LOC TO THIS LATER;;;;;;;;;;;;;x
