Revert "fixing provnames p4" and adds 5 new kansai provs
This reverts commit 7533c97d7305fc7cff2553caddad1f026af65462.

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3612,11 +3612,11 @@ PROV3610;Kamogata;;;;;;;;;;;;;x
 PROV3611;Kurashiki;;;;;;;;;;;;;x
 PROV3612;Okayama;;;;;;;;;;;;;x
 PROV3613;Katsuyama;;;;;;;;;;;;;x
-PROV3614;Penjwin;;;;;;;;;;;;;x
-PROV3615;Kalar;;;;;;;;;;;;;x
-PROV3616;Qasr-e Shirin;;;;;;;;;;;;;x
-PROV3617;Mehran;;;;;;;;;;;;;x
-PROV3618;Abadan;;;;;;;;;;;;;x
+PROV3614;Wakayama;;;;;;;;;;;;;x
+PROV3615;Kumano;;;;;;;;;;;;;x
+PROV3616;Tamaru;;;;;;;;;;;;;x
+PROV3617;Toba;;;;;;;;;;;;;x
+PROV3618;Tsu;;;;;;;;;;;;;x
 PROV3619;Abdali;;;;;;;;;;;;;x
 PROV3620;Al Wafrah;;;;;;;;;;;;;x
 PROV3621;Khafi;;;;;;;;;;;;;x
