added another 5 provs in kansai

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1656,7 +1656,7 @@ PROV1654;Bonin;;;;;;;;;;;;;x
 PROV1655;Osaka;;;;;;;;;;;;;x
 PROV1656;Wakayama;;;;;;;;;;;;;x
 PROV1657;Kyoto;;;;;;;;;;;;;x
-PROV1658;Nara;;;;;;;;;;;;;x
+PROV1658;Kuwana;;;;;;;;;;;;;x
 PROV1659;Kobe;;;;;;;;;;;;;x
 PROV1660;Sasebo;;;;;;;;;;;;;x
 PROV1661;Nagasaki;;;;;;;;;;;;;x
@@ -3617,12 +3617,12 @@ PROV3615;Kumano;;;;;;;;;;;;;x
 PROV3616;Tamaru;;;;;;;;;;;;;x
 PROV3617;Toba;;;;;;;;;;;;;x
 PROV3618;Tsu;;;;;;;;;;;;;x
-PROV3619;Abdali;;;;;;;;;;;;;x
-PROV3620;Al Wafrah;;;;;;;;;;;;;x
-PROV3621;Khafi;;;;;;;;;;;;;x
-PROV3622;Qasr Balal;;;;;;;;;;;;;x
-PROV3623;Ras al-Khaiman;;;;;;;;;;;;;x
-PROV3624;Umm al-Quwain;;;;;;;;;;;;;x
+PROV3619;Kameyama;;;;;;;;;;;;;x
+PROV3620;Kanbe;;;;;;;;;;;;;x
+PROV3621;Yokkaichi;;;;;;;;;;;;;x
+PROV3622;Komono;;;;;;;;;;;;;x
+PROV3623;Nagashima;;;;;;;;;;;;;x
+PROV3624;Nagashima;;;;;;;;;;;;;x
 PROV3625;Fujairah;;;;;;;;;;;;;x
 PROV3626;Sharjah;;;;;;;;;;;;;x
 PROV3627;Ajman;;;;;;;;;;;;;x
