added 5 new provs in kansai

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3622,11 +3622,11 @@ PROV3620;Kanbe;;;;;;;;;;;;;x
 PROV3621;Yokkaichi;;;;;;;;;;;;;x
 PROV3622;Komono;;;;;;;;;;;;;x
 PROV3623;Nagashima;;;;;;;;;;;;;x
-PROV3624;Nagashima;;;;;;;;;;;;;x
-PROV3625;Fujairah;;;;;;;;;;;;;x
-PROV3626;Sharjah;;;;;;;;;;;;;x
-PROV3627;Ajman;;;;;;;;;;;;;x
-PROV3628;Kuria Muria;;;;;;;;;;;;;x
+PROV3624;Hikone;;;;;;;;;;;;;x
+PROV3625;Nagahama;;;;;;;;;;;;;x
+PROV3626;Takashima;;;;;;;;;;;;;x
+PROV3627;Yokaichi;;;;;;;;;;;;;x
+PROV3628;Koka;;;;;;;;;;;;;x
 PROV3629;Kamaran;;;;;;;;;;;;;x
 PROV3630;Firuza;;;;;;;;;;;;;x
 PROV3631;Sarakhs;;;;;;;;;;;;;x
