added 7 new kansai provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3627,13 +3627,13 @@ PROV3625;Nagahama;;;;;;;;;;;;;x
 PROV3626;Takashima;;;;;;;;;;;;;x
 PROV3627;Yokaichi;;;;;;;;;;;;;x
 PROV3628;Koka;;;;;;;;;;;;;x
-PROV3629;Kamaran;;;;;;;;;;;;;x
-PROV3630;Firuza;;;;;;;;;;;;;x
-PROV3631;Sarakhs;;;;;;;;;;;;;x
-PROV3632;Kara-Kum;;;;;;;;;;;;;x
-PROV3633;Osh;;;;;;;;;;;;;x
-PROV3634;Kulab;;;;;;;;;;;;;x
-PROV3635;Kalai Khumb;;;;;;;;;;;;;x
+PROV3629;Yasu;;;;;;;;;;;;;x
+PROV3630;Otsu;;;;;;;;;;;;;x
+PROV3631;Joyo;;;;;;;;;;;;;x
+PROV3632;Yodo;;;;;;;;;;;;;x
+PROV3633;Kasagidera;;;;;;;;;;;;;x
+PROV3634;Koriyama;;;;;;;;;;;;;x
+PROV3635;Sakurai;;;;;;;;;;;;;x
 PROV3636;Karakul;;;;;;;;;;;;;x
 PROV3637;Kala Wamar;;;;;;;;;;;;;x
 PROV3638;Barchidev;;;;;;;;;;;;;x
