--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -391,6 +391,7 @@ DOM_ADJ;Dominican;Dominicain;Dominikanisch;;;;;;;;;;;x
 DON_ADJ;Cossack;;;;;;;;;;;;;x
 DRA_ADJ;Dravidian;;;;;;;;;;;;;x
 DRU_ADJ;Druze;;;;;;;;;;;;;x
+DIT_ADJ;Dutch;;;;;;;;;;;;;x
 DRV_ADJ;Darvazi;;;;;;;;;;;;;x
 DUB_ADJ;Dubai;;;;;;;;;;;x
 DUR_ADJ;Pashtun;;;;;;;;;;;;;x
