--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -228,6 +228,7 @@ DAM;Damagaram;;;;;;;;;;;;;x
 DAR;Darfur;;;;;;;;;;;;;x
 DEN;Denmark;Danemark;Dänemark;;;;;;;;;;;x
 DES;Deseret;Deseret;Dischret;;;;;;;;;;;x
+DIT;Dietsland;;;;;;;;;;;;;x
 DGT;Diaguita;;;;;;;;;;;;;x
 DJA;Jambi;;;;;;;;;;;;;x
 DLM;Dalmatia;;;;;;;;;;;;;x
