--- a/TGCFantasyFormables/localisation/decisions.csv
+++ b/TGCFantasyFormables/localisation/decisions.csv
@@ -9,3 +9,5 @@ andean_conf_by_sword_title;Form the Andean Confederation, by force.;;;;;;;;;;;;x
 andean_conf_by_sword_desc;It is time to unite the Andean Nations under a single flag! Though some may resist, we shall bring all Andean nations together under one banner through the strength of our will and the might of our soldiers.;;;;;;;;;;;;x
 form_andean_conf_title;Form the Andean Confederation;;;;;;;;;;;;x
 form_andean_conf_desc;It is time to unite the Andean Nations under a single flag! With all of them under our sphere of influence, it will be easy to come to an agreement to make this dream reality.;;;;;;;;;;;;x
+enforce_german_influence_title;Enter German Politics;;;;;;;;;;;;;x
+enforce_german_influence_desc;In our quest for a greater Dutch homeland, the North-Western German states stand as prime targets for our expansion.;;;;;;;;;;;;;x
