--- a/TGCFantasyFormables/localisation/events.csv
+++ b/TGCFantasyFormables/localisation/events.csv
@@ -1,1 +1,5 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
+EVTNAME450000;The Dutch interfere in our Politics;;;;;;;;;;;;;x
+EVTDESC450000;The Dutch have forced their way into our country's politics, influencing the daily lives of our people;;;;;;;;;;;;;x
+EVTOPTA450000;Let them be;;;;;;;;;;;;;x
+EVTOPTB450000;Reject their influence;;;;;;;;;;;;;x
