added 10 new provs to kansai

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3634,16 +3634,16 @@ PROV3632;Yodo;;;;;;;;;;;;;x
 PROV3633;Kasagidera;;;;;;;;;;;;;x
 PROV3634;Koriyama;;;;;;;;;;;;;x
 PROV3635;Sakurai;;;;;;;;;;;;;x
-PROV3636;Karakul;;;;;;;;;;;;;x
-PROV3637;Kala Wamar;;;;;;;;;;;;;x
-PROV3638;Barchidev;;;;;;;;;;;;;x
-PROV3639;Qochen;;;;;;;;;;;;;x
-PROV3640;Gazik;;;;;;;;;;;;;x
-PROV3641;Kala-e Naw;;;;;;;;;;;;;x
-PROV3642;Jamarj-e Bala;;;;;;;;;;;;;x
-PROV3643;Kala Panja;;;;;;;;;;;;;x
-PROV3644;Mazar-e Sharif;;;;;;;;;;;;;x
-PROV3645;Ghor;;;;;;;;;;;;;x
+PROV3636;Takatori;;;;;;;;;;;;;x
+PROV3637;Yoshino;;;;;;;;;;;;;x
+PROV3638;Shinjo;;;;;;;;;;;;;x
+PROV3639;Tawaramoto;;;;;;;;;;;;;x
+PROV3640;Koizumi;;;;;;;;;;;;;x
+PROV3641;Matsubara;;;;;;;;;;;;;x
+PROV3642;Sayama;;;;;;;;;;;;;x
+PROV3643;Kishiwada;;;;;;;;;;;;;x
+PROV3644;Izumi;;;;;;;;;;;;;x
+PROV3645;Sakai;;;;;;;;;;;;;x
 PROV3646;Herat;;;;;;;;;;;;;x
 PROV3647;Nad-i Ali;;;;;;;;;;;;;x
 PROV3648;Lash;;;;;;;;;;;;;x
