added 10 more new kansai provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3644,16 +3644,16 @@ PROV3642;Sayama;;;;;;;;;;;;;x
 PROV3643;Kishiwada;;;;;;;;;;;;;x
 PROV3644;Izumi;;;;;;;;;;;;;x
 PROV3645;Sakai;;;;;;;;;;;;;x
-PROV3646;Herat;;;;;;;;;;;;;x
-PROV3647;Nad-i Ali;;;;;;;;;;;;;x
-PROV3648;Lash;;;;;;;;;;;;;x
-PROV3649;Nushki;;;;;;;;;;;;;x
-PROV3650;Kharan;;;;;;;;;;;;;x
-PROV3651;Panjgur;;;;;;;;;;;;;x
-PROV3652;Pishukan;;;;;;;;;;;;;x
-PROV3653;Baltit;;;;;;;;;;;;;x
-PROV3654;Nagar;;;;;;;;;;;;;x
-PROV3655;Gilgit;;;;;;;;;;;;;x
+PROV3646;Osaka;;;;;;;;;;;;;x
+PROV3647;Takatsuki;;;;;;;;;;;;;x
+PROV3648;Toshima;;;;;;;;;;;;;x
+PROV3649;Amagasaki;;;;;;;;;;;;;x
+PROV3650;Hyogo;;;;;;;;;;;;;x
+PROV3651;Akashi;;;;;;;;;;;;;x
+PROV3652;Himeji;;;;;;;;;;;;;x
+PROV3653;Ako;;;;;;;;;;;;;x
+PROV3654;Tatsuno;;;;;;;;;;;;;x
+PROV3655;Yamasaki;;;;;;;;;;;;;x
 PROV3656;Darkut;;;;;;;;;;;;;x
 PROV3657;Chilas;;;;;;;;;;;;;x
 PROV3658;Dasu;;;;;;;;;;;;;x
