added 10 new kansai provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3654,16 +3654,16 @@ PROV3652;Himeji;;;;;;;;;;;;;x
 PROV3653;Ako;;;;;;;;;;;;;x
 PROV3654;Tatsuno;;;;;;;;;;;;;x
 PROV3655;Yamasaki;;;;;;;;;;;;;x
-PROV3656;Darkut;;;;;;;;;;;;;x
-PROV3657;Chilas;;;;;;;;;;;;;x
-PROV3658;Dasu;;;;;;;;;;;;;x
-PROV3659;Dagar;;;;;;;;;;;;;x
-PROV3660;Peshawar;;;;;;;;;;;;;x
-PROV3661;Mandi;;;;;;;;;;;;;x
-PROV3662;Rampur;;;;;;;;;;;;;x
-PROV3663;Banganapalle;;;;;;;;;;;;;x
-PROV3664;Karaman;;;;;;;;;;;;;x
-PROV3665;Kayseri;;;;;;;;;;;;;x
+PROV3656;Kanzaki;;;;;;;;;;;;;x
+PROV3657;Kato;;;;;;;;;;;;;x
+PROV3658;Ono;;;;;;;;;;;;;x
+PROV3659;Sanda;;;;;;;;;;;;;x
+PROV3660;Sasayama;;;;;;;;;;;;;x
+PROV3661;Tada;;;;;;;;;;;;;x
+PROV3662;Kameyama;;;;;;;;;;;;;x
+PROV3663;Sonobe;;;;;;;;;;;;;x
+PROV3664;Ikuno;;;;;;;;;;;;;x
+PROV3665;Kaibara;;;;;;;;;;;;;x
 PROV3666;Lake Sevan;;;;;;;;;;;;;x
 PROV3667;Nadezhinskoye;;;;;;;;;;;;;x
 PROV3668;Batalpashinskaya;;;;;;;;;;;;;x
