added final 5 kansai provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1657,7 +1657,7 @@ PROV1655;Osaka;;;;;;;;;;;;;x
 PROV1656;Wakayama;;;;;;;;;;;;;x
 PROV1657;Kyoto;;;;;;;;;;;;;x
 PROV1658;Kuwana;;;;;;;;;;;;;x
-PROV1659;Kobe;;;;;;;;;;;;;x
+PROV1659;Hyogo;;;;;;;;;;;;;x
 PROV1660;Sasebo;;;;;;;;;;;;;x
 PROV1661;Nagasaki;;;;;;;;;;;;;x
 PROV1662;Kagoshima;;;;;;;;;;;;;x
@@ -3648,7 +3648,7 @@ PROV3646;Muraoka;;;;;;;;;;;;;x
 PROV3647;Takatsuki;;;;;;;;;;;;;x
 PROV3648;Toshima;;;;;;;;;;;;;x
 PROV3649;Amagasaki;;;;;;;;;;;;;x
-PROV3650;Hyogo;;;;;;;;;;;;;x
+PROV3650;Toyooka;;;;;;;;;;;;;x
 PROV3651;Akashi;;;;;;;;;;;;;x
 PROV3652;Himeji;;;;;;;;;;;;;x
 PROV3653;Ako;;;;;;;;;;;;;x
@@ -3664,11 +3664,11 @@ PROV3662;Kameyama;;;;;;;;;;;;;x
 PROV3663;Sonobe;;;;;;;;;;;;;x
 PROV3664;Ikuno;;;;;;;;;;;;;x
 PROV3665;Kaibara;;;;;;;;;;;;;x
-PROV3666;Lake Sevan;;;;;;;;;;;;;x
-PROV3667;Nadezhinskoye;;;;;;;;;;;;;x
-PROV3668;Batalpashinskaya;;;;;;;;;;;;;x
-PROV3669;Psyfabz;;;;;;;;;;;;;x
-PROV3670;Kagyzman;;;;;;;;;;;;;x
+PROV3666;Ayabe;;;;;;;;;;;;;x
+PROV3667;Fukuchiyama;;;;;;;;;;;;;x
+PROV3668;Izushi;;;;;;;;;;;;;x
+PROV3669;Miyazu;;;;;;;;;;;;;x
+PROV3670;Maizuru;;;;;;;;;;;;;x
 PROV3671;Stari-Yurt;;;;;;;;;;;;;x
 PROV3672;Madzhalis;;;;;;;;;;;;;x
 PROV3673;Lagan;;;;;;;;;;;;;x
