--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3566,146 +3566,146 @@ PROV3564;Marugame;;;;;;;;;;;;;x
 PROV3565;Takamatsu;;;;;;;;;;;;;x
 PROV3566;Awaji;;;;;;;;;;;;;x
 PROV3567;Amami;;;;;;;;;;;;;x
-PROV3568;Yakushima;;;;;;;;;;;;;x
-PROV3569;Tanegashima;;;;;;;;;;;;;x
-PROV3570;Miyazaki;;;;;;;;;;;;;x
-PROV3571;Iki;;;;;;;;;;;;;x
-PROV3572;Hirado;;;;;;;;;;;;;x
-PROV3573;Isahaya;;;;;;;;;;;;;x
-PROV3574;Kashima;;;;;;;;;;;;;x
-PROV3575;Imari;;;;;;;;;;;;;x
-PROV3576;Ogi;;;;;;;;;;;;;x
-PROV3577;Akizuki;;;;;;;;;;;;;x
-PROV3578;Uto;;;;;;;;;;;;;x
-PROV3579;Miike;;;;;;;;;;;;;x
-PROV3580;Hososhima;;;;;;;;;;;;;x
-PROV3581;Tadotsu;;;;;;;;;;;;;x
-PROV3582;Yawatahama;;;;;;;;;;;;;x
-PROV3583;Yoshida;;;;;;;;;;;;;x
-PROV3584;Shodoshima;;;;;;;;;;;;;x
-PROV3585;Akamagaseki;;;;;;;;;;;;;x
-PROV3586;Yamaguchi;;;;;;;;;;;;;x
-PROV3587;Tokuyama;;;;;;;;;;;;;x
-PROV3588;Hirao;;;;;;;;;;;;;x
-PROV3589;Tsuwano;;;;;;;;;;;;;x
-PROV3590;Hamada;;;;;;;;;;;;;x
-PROV3591;Oda;;;;;;;;;;;;;x
-PROV3592;Matsue;;;;;;;;;;;;;x
-PROV3593;Hirose;;;;;;;;;;;;;x
-PROV3594;Oki;;;;;;;;;;;;;x
-PROV3595;Tottori;;;;;;;;;;;;;x
-PROV3596;Iwakuni;;;;;;;;;;;;;x
-PROV3597;Ube;;;;;;;;;;;;;x
-PROV3598;Kure;;;;;;;;;;;;;x
-PROV3599;Mihara;;;;;;;;;;;;;x
-PROV3600;Fukuyama;;;;;;;;;;;;;x
-PROV3601;Uemachi;;;;;;;;;;;;;x
-PROV3602;Niimi;;;;;;;;;;;;;x
-PROV3603;Takahashi;;;;;;;;;;;;;x
-PROV3604;Nariwa;;;;;;;;;;;;;x
-PROV3605;Ashimori;;;;;;;;;;;;;x
-PROV3606;Soja;;;;;;;;;;;;;x
-PROV3607;Okada;;;;;;;;;;;;;x
-PROV3608;Niwase;;;;;;;;;;;;;x
-PROV3609;Kasaoka;;;;;;;;;;;;;x
-PROV3610;Kamogata;;;;;;;;;;;;;x
-PROV3611;Kurashiki;;;;;;;;;;;;;x
-PROV3612;Okayama;;;;;;;;;;;;;x
-PROV3613;Katsuyama;;;;;;;;;;;;;x
-PROV3614;Wakayama;;;;;;;;;;;;;x
-PROV3615;Kumano;;;;;;;;;;;;;x
-PROV3616;Tamaru;;;;;;;;;;;;;x
-PROV3617;Toba;;;;;;;;;;;;;x
-PROV3618;Tsu;;;;;;;;;;;;;x
-PROV3619;Kameyama;;;;;;;;;;;;;x
-PROV3620;Kanbe;;;;;;;;;;;;;x
-PROV3621;Yokkaichi;;;;;;;;;;;;;x
-PROV3622;Komono;;;;;;;;;;;;;x
-PROV3623;Nagashima;;;;;;;;;;;;;x
-PROV3624;Hikone;;;;;;;;;;;;;x
-PROV3625;Nagahama;;;;;;;;;;;;;x
-PROV3626;Takashima;;;;;;;;;;;;;x
-PROV3627;Yokaichi;;;;;;;;;;;;;x
-PROV3628;Koka;;;;;;;;;;;;;x
-PROV3629;Yasu;;;;;;;;;;;;;x
-PROV3630;Otsu;;;;;;;;;;;;;x
-PROV3631;Joyo;;;;;;;;;;;;;x
-PROV3632;Yodo;;;;;;;;;;;;;x
-PROV3633;Kasagidera;;;;;;;;;;;;;x
-PROV3634;Koriyama;;;;;;;;;;;;;x
-PROV3635;Sakurai;;;;;;;;;;;;;x
-PROV3636;Takatori;;;;;;;;;;;;;x
-PROV3637;Yoshino;;;;;;;;;;;;;x
-PROV3638;Shinjo;;;;;;;;;;;;;x
-PROV3639;Tawaramoto;;;;;;;;;;;;;x
-PROV3640;Koizumi;;;;;;;;;;;;;x
-PROV3641;Matsubara;;;;;;;;;;;;;x
-PROV3642;Sayama;;;;;;;;;;;;;x
-PROV3643;Kishiwada;;;;;;;;;;;;;x
-PROV3644;Izumi;;;;;;;;;;;;;x
-PROV3645;Sakai;;;;;;;;;;;;;x
-PROV3646;Muraoka;;;;;;;;;;;;;x
-PROV3647;Takatsuki;;;;;;;;;;;;;x
-PROV3648;Toshima;;;;;;;;;;;;;x
-PROV3649;Amagasaki;;;;;;;;;;;;;x
-PROV3650;Toyooka;;;;;;;;;;;;;x
-PROV3651;Akashi;;;;;;;;;;;;;x
-PROV3652;Himeji;;;;;;;;;;;;;x
-PROV3653;Ako;;;;;;;;;;;;;x
-PROV3654;Tatsuno;;;;;;;;;;;;;x
-PROV3655;Yamasaki;;;;;;;;;;;;;x
-PROV3656;Kanzaki;;;;;;;;;;;;;x
-PROV3657;Kato;;;;;;;;;;;;;x
-PROV3658;Ono;;;;;;;;;;;;;x
-PROV3659;Sanda;;;;;;;;;;;;;x
-PROV3660;Sasayama;;;;;;;;;;;;;x
-PROV3661;Tada;;;;;;;;;;;;;x
-PROV3662;Kameyama;;;;;;;;;;;;;x
-PROV3663;Sonobe;;;;;;;;;;;;;x
-PROV3664;Ikuno;;;;;;;;;;;;;x
-PROV3665;Kaibara;;;;;;;;;;;;;x
-PROV3666;Ayabe;;;;;;;;;;;;;x
-PROV3667;Fukuchiyama;;;;;;;;;;;;;x
-PROV3668;Izushi;;;;;;;;;;;;;x
-PROV3669;Miyazu;;;;;;;;;;;;;x
-PROV3670;Maizuru;;;;;;;;;;;;;x
-PROV3671;Stari-Yurt;;;;;;;;;;;;;x
-PROV3672;Madzhalis;;;;;;;;;;;;;x
-PROV3673;Lagan;;;;;;;;;;;;;x
-PROV3674;Temir-Khan-Shura;;;;;;;;;;;;;x
-PROV3675;Khunzakh;;;;;;;;;;;;;x
-PROV3676;Khuchni;;;;;;;;;;;;;x
-PROV3677;Kumukh;;;;;;;;;;;;;x
-PROV3678;Kurakh;;;;;;;;;;;;;x
-PROV3679;Endirey;;;;;;;;;;;;;x
-PROV3680;Vedeno;;;;;;;;;;;;;x
-PROV3681;Medvezhe;;;;;;;;;;;;;x
-PROV3682;Terekli-Mekteb;;;;;;;;;;;;;x
-PROV3683;Naur;;;;;;;;;;;;;x
-PROV3684;Galyugaevskaya;;;;;;;;;;;;;x
-PROV3685;Sunzha;;;;;;;;;;;;;x
-PROV3686;Nazran;;;;;;;;;;;;;x
-PROV3687;Metskhal;;;;;;;;;;;;;x
-PROV3688;Tsemi;;;;;;;;;;;;;x
-PROV3689;Mozdok;;;;;;;;;;;;;x
-PROV3690;Borokovo;;;;;;;;;;;;;x
-PROV3691;Ardon;;;;;;;;;;;;;x
-PROV3692;Kashkatau;;;;;;;;;;;;;x
-PROV3693;Kart-Yurt;;;;;;;;;;;;;x
-PROV3694;Akhmetogorskoye;;;;;;;;;;;;;x
-PROV3695;Dausuz;;;;;;;;;;;;;x
-PROV3696;Bash-Oba;;;;;;;;;;;;;x
-PROV3697;Penezyqwaj;;;;;;;;;;;;;x
-PROV3698;Armavir;;;;;;;;;;;;;x
-PROV3699;Blagoveshchenskaya;;;;;;;;;;;;;x
-PROV3700;Tamanskaja;;;;;;;;;;;;;x
-PROV3701;Temrjuku;;;;;;;;;;;;;x
-PROV3702;Gali;;;;;;;;;;;;;x
-PROV3703;Zugdidi;;;;;;;;;;;;;x
-PROV3704;Ozurgeti;;;;;;;;;;;;;x
-PROV3705;Gori;;;;;;;;;;;;;x
-PROV3706;Telavi;;;;;;;;;;;;;x
-PROV3707;Dusheti;;;;;;;;;;;;;x
+PROV3568;Kajiki;;;;;;;;;;;;;x
+PROV3569;Kushima;;;;;;;;;;;;;x
+PROV3570;Obi;;;;;;;;;;;;;x
+PROV3571;Sadowara;;;;;;;;;;;;;x
+PROV3572;Takanabe;;;;;;;;;;;;;x
+PROV3573;Shimohokita;;;;;;;;;;;;;x
+PROV3574;Nobeoka;;;;;;;;;;;;;x
+PROV3575;Saeki;;;;;;;;;;;;;x
+PROV3576;Oka;;;;;;;;;;;;;x
+PROV3577;Usuki;;;;;;;;;;;;;x
+PROV3578;Funai;;;;;;;;;;;;;x
+PROV3579;Hita;;;;;;;;;;;;;x
+PROV3580;Hiji;;;;;;;;;;;;;x
+PROV3581;Kitsuki;;;;;;;;;;;;;x
+PROV3582;Takada;;;;;;;;;;;;;x
+PROV3583;Nakatsu;;;;;;;;;;;;;x
+PROV3584;Kusu;;;;;;;;;;;;;x
+PROV3585;Kokura;;;;;;;;;;;;;x
+PROV3586;Fukuoka;;;;;;;;;;;;;x
+PROV3587;Karatsu;;;;;;;;;;;;;x
+PROV3588;Saga;;;;;;;;;;;;;x
+PROV3589;Omura;;;;;;;;;;;;;x
+PROV3590;Goto;;;;;;;;;;;;;x
+PROV3591;Shimabara;;;;;;;;;;;;;x
+PROV3592;Kurume;;;;;;;;;;;;;x
+PROV3593;Yanagawa;;;;;;;;;;;;;x
+PROV3594;Hiyotoshi;;;;;;;;;;;;;x
+PROV3595;Amakusa;;;;;;;;;;;;;x
+PROV3596;Uwajima;;;;;;;;;;;;;x
+PROV3597;Matsuyama;;;;;;;;;;;;;x
+PROV3598;Imabari;;;;;;;;;;;;;x
+PROV3599;Saijo;;;;;;;;;;;;;x
+PROV3600;Niihama;;;;;;;;;;;;;x
+PROV3601;Marugame;;;;;;;;;;;;;x
+PROV3602;Takamatsu;;;;;;;;;;;;;x
+PROV3603;Awaji;;;;;;;;;;;;;x
+PROV3604;Amami;;;;;;;;;;;;;x
+PROV3605;Yakushima;;;;;;;;;;;;;x
+PROV3606;Tanegashima;;;;;;;;;;;;;x
+PROV3607;Miyazaki;;;;;;;;;;;;;x
+PROV3608;Iki;;;;;;;;;;;;;x
+PROV3609;Hirado;;;;;;;;;;;;;x
+PROV3610;Isahaya;;;;;;;;;;;;;x
+PROV3611;Kashima;;;;;;;;;;;;;x
+PROV3612;Imari;;;;;;;;;;;;;x
+PROV3613;Ogi;;;;;;;;;;;;;x
+PROV3614;Akizuki;;;;;;;;;;;;;x
+PROV3615;Uto;;;;;;;;;;;;;x
+PROV3616;Miike;;;;;;;;;;;;;x
+PROV3617;Hososhima;;;;;;;;;;;;;x
+PROV3618;Tadotsu;;;;;;;;;;;;;x
+PROV3619;Yawatahama;;;;;;;;;;;;;x
+PROV3620;Yoshida;;;;;;;;;;;;;x
+PROV3621;Shodoshima;;;;;;;;;;;;;x
+PROV3622;Akamagaseki;;;;;;;;;;;;;x
+PROV3623;Yamaguchi;;;;;;;;;;;;;x
+PROV3624;Tokuyama;;;;;;;;;;;;;x
+PROV3625;Hirao;;;;;;;;;;;;;x
+PROV3626;Tsuwano;;;;;;;;;;;;;x
+PROV3627;Hamada;;;;;;;;;;;;;x
+PROV3628;Oda;;;;;;;;;;;;;x
+PROV3629;Matsue;;;;;;;;;;;;;x
+PROV3630;Hirose;;;;;;;;;;;;;x
+PROV3631;Oki;;;;;;;;;;;;;x
+PROV3632;Tottori;;;;;;;;;;;;;x
+PROV3633;Iwakuni;;;;;;;;;;;;;x
+PROV3634;Ube;;;;;;;;;;;;;x
+PROV3635;Kure;;;;;;;;;;;;;x
+PROV3636;Mihara;;;;;;;;;;;;;x
+PROV3637;Fukuyama;;;;;;;;;;;;;x
+PROV3638;Uemachi;;;;;;;;;;;;;x
+PROV3639;Niimi;;;;;;;;;;;;;x
+PROV3640;Takahashi;;;;;;;;;;;;;x
+PROV3641;Nariwa;;;;;;;;;;;;;x
+PROV3642;Ashimori;;;;;;;;;;;;;x
+PROV3643;Soja;;;;;;;;;;;;;x
+PROV3644;Okada;;;;;;;;;;;;;x
+PROV3645;Niwase;;;;;;;;;;;;;x
+PROV3646;Kasaoka;;;;;;;;;;;;;x
+PROV3647;Kamogata;;;;;;;;;;;;;x
+PROV3648;Kurashiki;;;;;;;;;;;;;x
+PROV3649;Okayama;;;;;;;;;;;;;x
+PROV3650;Katsuyama;;;;;;;;;;;;;x
+PROV3651;Wakayama;;;;;;;;;;;;;x
+PROV3652;Kumano;;;;;;;;;;;;;x
+PROV3653;Tamaru;;;;;;;;;;;;;x
+PROV3654;Toba;;;;;;;;;;;;;x
+PROV3655;Tsu;;;;;;;;;;;;;x
+PROV3656;Kameyama;;;;;;;;;;;;;x
+PROV3657;Kanbe;;;;;;;;;;;;;x
+PROV3658;Yokkaichi;;;;;;;;;;;;;x
+PROV3659;Komono;;;;;;;;;;;;;x
+PROV3660;Nagashima;;;;;;;;;;;;;x
+PROV3661;Hikone;;;;;;;;;;;;;x
+PROV3662;Nagahama;;;;;;;;;;;;;x
+PROV3663;Takashima;;;;;;;;;;;;;x
+PROV3664;Yokaichi;;;;;;;;;;;;;x
+PROV3665;Koka;;;;;;;;;;;;;x
+PROV3666;Yasu;;;;;;;;;;;;;x
+PROV3667;Otsu;;;;;;;;;;;;;x
+PROV3668;Joyo;;;;;;;;;;;;;x
+PROV3669;Yodo;;;;;;;;;;;;;x
+PROV3670;Kasagidera;;;;;;;;;;;;;x
+PROV3671;Koriyama;;;;;;;;;;;;;x
+PROV3672;Sakurai;;;;;;;;;;;;;x
+PROV3673;Takatori;;;;;;;;;;;;;x
+PROV3674;Yoshino;;;;;;;;;;;;;x
+PROV3675;Shinjo;;;;;;;;;;;;;x
+PROV3676;Tawaramoto;;;;;;;;;;;;;x
+PROV3677;Koizumi;;;;;;;;;;;;;x
+PROV3678;Matsubara;;;;;;;;;;;;;x
+PROV3679;Sayama;;;;;;;;;;;;;x
+PROV3680;Kishiwada;;;;;;;;;;;;;x
+PROV3681;Izumi;;;;;;;;;;;;;x
+PROV3682;Sakai;;;;;;;;;;;;;x
+PROV3683;Muraoka;;;;;;;;;;;;;x
+PROV3684;Takatsuki;;;;;;;;;;;;;x
+PROV3685;Toshima;;;;;;;;;;;;;x
+PROV3686;Amagasaki;;;;;;;;;;;;;x
+PROV3687;Toyooka;;;;;;;;;;;;;x
+PROV3688;Akashi;;;;;;;;;;;;;x
+PROV3689;Himeji;;;;;;;;;;;;;x
+PROV3690;Ako;;;;;;;;;;;;;x
+PROV3691;Tatsuno;;;;;;;;;;;;;x
+PROV3692;Yamasaki;;;;;;;;;;;;;x
+PROV3693;Kanzaki;;;;;;;;;;;;;x
+PROV3694;Kato;;;;;;;;;;;;;x
+PROV3695;Ono;;;;;;;;;;;;;x
+PROV3696;Sanda;;;;;;;;;;;;;x
+PROV3697;Sasayama;;;;;;;;;;;;;x
+PROV3698;Tada;;;;;;;;;;;;;x
+PROV3699;Kameyama;;;;;;;;;;;;;x
+PROV3700;Sonobe;;;;;;;;;;;;;x
+PROV3701;Ikuno;;;;;;;;;;;;;x
+PROV3702;Kaibara;;;;;;;;;;;;;x
+PROV3703;Ayabe;;;;;;;;;;;;;x
+PROV3704;Fukuchiyama;;;;;;;;;;;;;x
+PROV3705;Izushi;;;;;;;;;;;;;x
+PROV3706;Miyazu;;;;;;;;;;;;;x
+PROV3707;Maizuru;;;;;;;;;;;;;x
 PROV3708;Karayazi;;;;;;;;;;;;;x
 PROV3709;Signakh;;;;;;;;;;;;;x
 PROV3710;Ilisu;;;;;;;;;;;;;x
