split kyushu and chugoku into two new regions each

--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -479,15 +479,17 @@ KOR_1619;Pyongyang;;;;;;;;;;;;;x
 KOR_1624;Hanseong;;;;;;;;;;;;;x
 KOR_1627;Sariwon;;;;;;;;;;;;;x
 KOR_1635;Pusan;;;;;;;;;;;;;x
-JAP_1640;Chugoku;;;;;;;;;;;;;x
+JAP_3622;San'in;;;;;;;;;;;;;x
+JAP_1638;San'yodo;;;;;;;;;;;;;x
 JAP_1649;Kanto;;;;;;;;;;;;;x
 JAP_1654;Bonin Islands;;;;;;;;;;;;;x
-JAP_1655;Kansai;;;;;;;;;;;;;x
-JAP_1660;Kyushu;;;;;;;;;;;;;x
-JAP_1665;Shikoku;;;;;;;;;;;;;x
+JAP_1655;Go-Kinai;;;;;;;;;;;;;x
+JAP_3586;Northern Sakaido;;;;;;;;;;;;;x
+JAP_1664;Southern Sakaido;;;;;;;;;;;;;x
+JAP_1665;Nankaido;;;;;;;;;;;;;x
 JAP_1672;Tohoku;;;;;;;;;;;;;x
 JAP_1675;Chubu;;;;;;;;;;;;;x
-JAP_1678;Nansei Islands;;;;;;;;;;;;;x
+JAP_1678;Ryukyu Islands;;;;;;;;;;;;;x
 MOR_1683;Taza;;;;;;;;;;;;;x
 MOR_1686;Fez;;;;;;;;;;;;;x
 SPA_1689;Ceuta y Melilla;;;;;;;;;;;;;x
