bugfix for limburg crisis

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1883,13 +1883,13 @@ EVTDESC999394;The Russian ambassador has arrived in Frankfurt today, informing u
 EVTNAME999394;Russians Demand Galicia and Posen;;;;;;;;;;;;;x
 EVTOPTA999394;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999394;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled-for annexation of Austria, shall be demanding concessions from us. TThey demand that we recognize their claims over Galicia, and surrender all land outside the borders of the old German Confederation. This would cost us dearly, both in power and prestige, and would give the Russians a clear path into Europe. Refusing these demands will likely result in war!;;;;;;;;;;;;;x
+EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled-for annexation of Austria, shall be demanding concessions from us. They demand that we recognize their claims over Galicia, and surrender all land outside the borders of the old German Confederation. This would cost us dearly, both in power and prestige, and would give the Russians a clear path into Europe. Refusing these demands will likely result in war!;;;;;;;;;;;;;x
 EVTNAME999395;Russians Demand Pre-Confederation Borders;;;;;;;;;;;;;x
 EVTOPTA999395;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999395;Come and get it!;;;;;;;;;;;;;x
 EVTDESC999396;Seeing the uncalled for actions against Austria, the Russian Empire has informed us that they will be taking the burden of restoring order upon themselves and are now seeking to dismantle the German nation.;;;;;;;;;;;;;x
 EVTNAME999396;Russians Declare War!;;;;;;;;;;;;;x
-EVTOPTA999396;The Russian bear strikes again.;;;;;;;;;;;;;x
+EVTOPTA999396;The Russian Bear strikes again.;;;;;;;;;;;;;x
 EVTDESC999397;The Germans have accepted the Russian demands and a treaty has been writen to enforce these demands. The Russian Empire displays its power.;;;;;;;;;;;;;x
 EVTNAME999397;Treaty of Frankfurt $YEAR$;;;;;;;;;;;;;x
 EVTOPTA999397;Long live the Tsar!;;;;;;;;;;;;;x
@@ -1915,7 +1915,7 @@ EVTOPTA999403;Austria is Lost.;;;;;;;;;;;;;x
 EVTDESC999404;The German Menace in the north was not able to break the will of the Austrian soldier, our independence is secured! The Bavarian forces of the Germans have even defected and have joined the Austrian side, seeing that their former country is weak and cannot protect them. We expect them to join Austria proper in the next days.;;;;;;;;;;;;;x
 EVTNAME999404;Austria is Victorious;;;;;;;;;;;;;x
 EVTOPTA999404;Gott erhalte Franz den Kaiser!;;;;;;;;;;;;;x
-EVTDESC999405;Despite our best efforts the Austrians have pushed us back we where forced to sign a peace deal with them, which removes our claims on them. However, it appears during the fighting the Bavarians, which already had much closer ties to Austria, have declared them selves free and defected. The short lived Bavarian nation then elected to join the Austrians to seek protection from us.;;;;;;;;;;;;;x
+EVTDESC999405;Despite our best efforts, the Austrians have pushed us back and forced us to sign a peace treaty, removing our claims on all territories that they own. However, it appears that during the fighting, the Bavarians, which already had much closer ties to Austria, have declared themselves free and defected. The short-lived Bavarian nation then elected to join the Austrians to seek protection from us.;;;;;;;;;;;;;x
 EVTNAME999405;Austrian Independence Maintained;;;;;;;;;;;;;x
 EVTOPTA999405;A terrible defeat.;;;;;;;;;;;;;x
 EVTDESC999406;The new formed German nation has declared war upon the Austrian Empire, citing that these two nation are to no longer be seperated, but be merged into one German nation. The Austrian stance of refusal to accept this, stating that the Austrian nation is Austrian not German, led to Germany using the sword to enforce the union. We are in a position to help the Austrians out, if we want.;;;;;;;;;;;;;x
