changed slavic union names

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -2010,13 +2010,20 @@ SIB_hms_government;Siberia;;;;;;;;;;;;;x
 SIB_prussian_constitutionalism;Siberia;;;;;;;;;;;;;x
 SIE_colonial_company;Siebenburgen;;;;;;;;;;;;;x
 SIE_dominion;Siebenburgen;;;;;;;;;;;;;x
-SLU_absolute_monarchy;Empire of All Slavs;;;;;;;;;;;;;x
-SLU_hms_government;Empire of All Slavs;;;;;;;;;;;;;x
-SLU_prussian_constitutionalism;Empire of All Slavs;;;;;;;;;;;;;x
-SLU_democracy;All-Slavic Union;;;;;;;;;;;;;x
-SLU_proletarian_dictatorship;Union of Slavic Soviet Socialist Republics;;;;;;;;;;;;;x
-SLU_fascist_dictatorship;Greater Slavic Empire;;;;;;;;;;;;;x
-SLU_bourgeois_dictatorship;United Slavic Federation;;;;;;;;;;;;;x
+SLU_absolute_monarchy;Tsardom of All-Slavic Peoples;;;;;;;;;;;;;x
+SLU_democracy;Slavic Federal Republic;;;;;;;;;;;;;x
+SLU_democracy2;Slavic Federal Republic;;;;;;;;;;;;;x
+SLU_fascist_dictatorship;Union of Antes-Venedes and Sclaveni;;;;;;;;;;;;;x
+SLU_federal_democracy;Slavic Federal Republic;;;;;;;;;;;;;x
+SLU_hms_government;All-Slavic Commonwealth;;;;;;;;;;;;;x
+SLU_hms_government2;All-Slavic Commonwealth;;;;;;;;;;;;;x
+SLU_absolute_monarchy2;Tsardom of All-Slavic Peoples;;;;;;;;;;;;;x
+SLU_prussian_constitutionalism2;Union Empire of All-Slavic Peoples;;;;;;;;;;;;;x
+SLU_parliamentary_republic;Slavic Federal Republic;;;;;;;;;;;;;x
+SLU_proletarian_dictatorship;Union of Slavic Socialist Republics;;;;;;;;;;;;;x
+SLU_prussian_constitutionalism;Union Empire of All-Slavic Peoples;;;;;;;;;;;;;x
+SLU_bourgeois_dictatorship;All-Slavic Federative Union;;;;;;;;;;;;;x
+SLU_presidential_dictatorship;Slavic Union;;;;;;;;;;;;;x
 SLS_colonial_company;Schlesien;;;;;;;;;;;;;x
 SLS_dominion;Schlesien;;;;;;;;;;;;;x
 SLW_absolute_monarchy;Bone;;;;;;;;;;;;;x
