--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -653,7 +653,7 @@ SLG;Selangor;;;;;;;;;;;;;x
 SLO;Slovenia;Slovénie;Slowenien;;;;;;;;;;;x
 SLS;Silesia;;;;;;;;;;;;;x
 SLT;Salta;;;;;;;;;;;x
-SLU;Slavic Union;;;;;;;;;;;x
+SLU;Slavia;;;;;;;;;;;x
 SLV;Slovakia;Slovaquie;Slowakei;;;;;;;;;;;x
 SLW;Sulawesi;;;;;;;;;;;;;x
 SMO;Samoa;;;;;;;;;;;;;x
