shifted extra amami prov to korea as a treaty port

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1677,7 +1677,7 @@ PROV1675;Nagoya;;;;;;;;;;;;;x
 PROV1676;Shizuoka;;;;;;;;;;;;;x
 PROV1677;Nagano;;;;;;;;;;;;;x
 PROV1678;Okinawa;;;;;;;;;;;;;x
-PROV1679;Amami;;;;;;;;;;;;;x
+PROV1679;Busan;;;;;;;;;;;;;x
 PROV1680;Fez;;;;;;;;;;;;;x
 PROV1681;Wazzan;;;;;;;;;;;;;x
 PROV1682;Meknes;;;;;;;;;;;;;x
