Localization for land wealth and adjusting values

--- a/TGC/localisation/00_crime.csv
+++ b/TGC/localisation/00_crime.csv
@@ -1,3 +1,23 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-province_wealth_0;Current Land Wealth: §G0%§!;;;;;;;;;;;;;x
+province_wealth_0;Current Land Wealth: §R0%§!;;;;;;;;;;;;;x
 desc_province_wealth_0;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_1;Current Land Wealth: §R10%§!;;;;;;;;;;;;;x
+desc_province_wealth_1;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_2;Current Land Wealth: §R20%§!;;;;;;;;;;;;;x
+desc_province_wealth_2;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_3;Current Land Wealth: §R30%§!;;;;;;;;;;;;;x
+desc_province_wealth_3;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_4;Current Land Wealth: §Y40%§!;;;;;;;;;;;;;x
+desc_province_wealth_4;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_5;Current Land Wealth: §Y50%§!;;;;;;;;;;;;;x
+desc_province_wealth_6;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_7;Current Land Wealth: §Y60%§!;;;;;;;;;;;;;x
+desc_province_wealth_7;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_7;Current Land Wealth: §G70%§!;;;;;;;;;;;;;x
+desc_province_wealth_7;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_8;Current Land Wealth: §G80%§!;;;;;;;;;;;;;x
+desc_province_wealth_8;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_9;Current Land Wealth: §G90%§!;;;;;;;;;;;;;x
+desc_province_wealth_9;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
+province_wealth_10;Current Land Wealth: §G100%§!;;;;;;;;;;;;;x
+desc_province_wealth_10;Land Wealth determines how likely are immigrants to pick this province and country. \n\nFactors like general prosperity, quality of life, job opportunities, wars and famines can influence land wealth.;;;;;;;;;;;;;x
